<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/iphone_12_pro_max__28"
    >

    <EditText
        android:id="@+id/Login_Email"
        style="@style/edit_text"
        android:layout_height="50dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.359"
        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/Login_Pass"
        style="@style/edit_text"
        android:layout_height="50dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login_Email"
        app:layout_constraintVertical_bias="0.116"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/textView3"
        style="@style/label_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        app:layout_constraintBottom_toTopOf="@+id/Login_Email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.177"
        app:layout_constraintStart_toStartOf="@+id/Login_Email"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView4"
        style="@style/label_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        app:layout_constraintBottom_toTopOf="@+id/Login_Pass"
        app:layout_constraintEnd_toEndOf="@+id/Login_Pass"
        app:layout_constraintHorizontal_bias="0.19"
        app:layout_constraintStart_toStartOf="@+id/Login_Pass"
        app:layout_constraintTop_toBottomOf="@+id/Login_Email"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/Login"
        style="@style/login_cnt_button"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login_Pass"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/Singup"
        style="@style/label_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trouble"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>