<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/iphone_12_pro_max__28">

    <EditText
        android:id="@+id/Email_singup"
        style="@style/edit_text"
        android:layout_height="50dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.359"
        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView6"
        style="@style/label_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        app:layout_constraintBottom_toTopOf="@+id/Email_singup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.185"
        app:layout_constraintStart_toStartOf="@+id/Email_singup"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/Pass_singup"
        style="@style/edit_text"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Email_singup"
        app:layout_constraintVertical_bias="0.116" />

    <EditText
        android:id="@+id/Confirm_pass"
        style="@style/edit_text"
        android:ems="10"
        android:hint="@string/confirm_pass"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Pass_singup"
        app:layout_constraintVertical_bias="0.154" />

    <TextView
        android:id="@+id/textView5"
        style="@style/label_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/Pass_singup"
        app:layout_constraintEnd_toEndOf="@+id/Pass_singup"
        app:layout_constraintHorizontal_bias="0.203"
        app:layout_constraintStart_toStartOf="@+id/Pass_singup"
        app:layout_constraintTop_toBottomOf="@+id/Email_singup"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView7"
        style="@style/label_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_pass"
        app:layout_constraintBottom_toTopOf="@+id/Confirm_pass"
        app:layout_constraintEnd_toEndOf="@+id/Confirm_pass"
        app:layout_constraintHorizontal_bias="0.247"
        app:layout_constraintStart_toStartOf="@+id/Confirm_pass"
        app:layout_constraintTop_toBottomOf="@+id/Pass_singup"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/cnt1"
        style="@style/login_cnt_button"
        android:text="@string/Continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Confirm_pass" />
</androidx.constraintlayout.widget.ConstraintLayout>