<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/iphone_12_pro_max__28"
    tools:context=".Frament_Maneger.singup2frg">

    <TextView
        android:id="@+id/textView8"
        style="@style/label_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstn"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/first_name"
        app:layout_constraintEnd_toEndOf="@+id/first_name"
        app:layout_constraintHorizontal_bias="0.201"
        app:layout_constraintStart_toStartOf="@+id/first_name"
        app:layout_constraintTop_toBottomOf="@+id/username"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/cnt2"
        style="@style/login_cnt_button"
        android:text="@string/Continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/last_name"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/username"
        style="@style/edit_text"
        android:layout_height="50dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.359"
        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/first_name"
        style="@style/edit_text"
        android:ems="10"
        android:hint="@string/firstn"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        app:layout_constraintVertical_bias="0.116" />

    <TextView
        android:id="@+id/textView9"
        style="@style/label_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lastn"
        app:layout_constraintBottom_toTopOf="@+id/last_name"
        app:layout_constraintEnd_toEndOf="@+id/last_name"
        app:layout_constraintHorizontal_bias="0.201"
        app:layout_constraintStart_toStartOf="@+id/last_name"
        app:layout_constraintTop_toBottomOf="@+id/first_name"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/last_name"
        style="@style/edit_text"
        android:ems="10"
        android:hint="@string/lastn"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_name"
        app:layout_constraintVertical_bias="0.154" />

    <TextView
        android:id="@+id/textView10"
        style="@style/label_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="@+id/username"
        app:layout_constraintHorizontal_bias="0.226"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>